--- a/Anomaly Detection.ipynb
+++ b/Anomaly Detection.ipynb
@@ -553,12 +553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_centered = train_zero_mean_np\n",
-    "X_test_centered  = test_zero_mean_np"
+    "CUTOFF = 0\n",
+    "\n",
+    "X_train_centered = train_zero_mean_np[CUTOFF:]\n",
+    "X_test_centered = test_zero_mean_np[CUTOFF:]"
    ]
   },
   {
