Removed k explanation PCA

--- a/Anomaly Detection.ipynb
+++ b/Anomaly Detection.ipynb
@@ -919,35 +919,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "k = 3  \n",
-    "  Captures too little variance (~92%), causing large reconstruction errors for both training and test sets.  \n",
-    "  The threshold becomes very high (~175), making the detector too permissive.  \n",
-    "  The residual plot looks unstable and irregular, with unusually large fluctuations compared to higher-k models.  \n",
-    "_Rejected: unstable residual pattern + underfitting._  \n",
-    "\n",
-    "k = 4  \n",
-    "  Captures a strong amount of variance (~97%) and stabilizes the reconstruction error.  \n",
-    "  The threshold (~115) sits at a reasonable level, high enough to avoid false alarms but low enough to detect major anomalies.  \n",
-    "  Normal behaviour on the right side of the test data remains below the threshold and significantly fewer false positives compared to k = 5 or 6.  \n",
-    "_Chosen: best balance between sensitivity and reliability._  \n",
-    "  \n",
-    "k = 5  \n",
-    "  Although it captures ~99% variance, the threshold drops to 80, which is more aggressive.  \n",
-    "  This thehold causes the right part of the test data to lie under the line.  \n",
-    "  This produces a noticeable number of false positives that do not correspond to visually abnormal behaviour.  \n",
-    "_Rejected: too many false alarms on the right side._  \n",
-    "\n",
-    "k = 6  \n",
-    "  Threshold becomes very low (~37), making the model extremely sensitive.  \n",
-    "  All the points over 12.000 (over 70%) are consider anomalies.   \n",
-    "  Clear signs of overfitting (residuals for train are extremely low for all the points over 500).  \n",
-    "_Rejected: severe over-detection of anomalies._  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Final Selection of the Number of Components**  \n",
     "Based on the comparison of residuals for k = 3, 4, 5, 6, we select **k = 4** as the optimal number of principal components.   \n",
     "\n",
@@ -1790,6 +1761,13 @@
     "The 5000 ponint window now spans seversal cycles at once. Each window contains a mix of normal and abnormal data, thus an anomaly that only occupies a part of the plot is \"diluted\" by the normal behaviour. Tha's why most of the thick lines between 2000 and 5000 and 35_000 and 50_000 form the teset data are not flagged as anomalies. DTW can also align a large part of the window to normal cycles and this is why the total distance drops. \n",
     "\n",
     "Therefore, we think that a window size of 2000 alongside with the other settings for that experiment is the optimal DTW that balances not only the anomaly detection, but also the runtime. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are sorry that the DTW part it quite big, but we did not know about the optimization when we first did it. A TA enourgaed us to not delete the first part even it is not optimal (so we didn't work for nothing), and just add the part with the optimization.   "
    ]
   },
   {
