--- a/Anomaly Detection.ipynb
+++ b/Anomaly Detection.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
     "    axs.plot(train_res_k, label='Train residuals', alpha=0.7)\n",
     "    axs.plot(test_res_k, label='Test residuals',  alpha=0.7)   \n",
     "\n",
-    "    threshold = round(np.quantile(train_res_test, quantile), 2)\n",
+    "    threshold = round(np.quantile(train_res_k, quantile), 2)\n",
     "\n",
     "    axs.axhline(threshold, color='red', linestyle='--', linewidth=2, label=f'Threshold ({quantile}% quantile = {threshold})')\n",
     "\n",
